--- a/vadzim/myFirstNgApp/src/app/app.component.html
+++ b/vadzim/myFirstNgApp/src/app/app.component.html
@@ -4,16 +4,10 @@
 
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link active" routerLink="/labs">LABS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" routerLink="/todos">TODOS</a>
       </li>
     </ul>
 
