--- a/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
+++ b/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
@@ -1,1 +1,12 @@
-<p>labs-overview works!</p>
+<h2>labs-overview</h2>
+<app-time></app-time>
+<app-dice></app-dice>
+<hr>
+<app-rating [starsamount]="6"></app-rating>
+<hr>
+<app-diashow [images]="[
+'https://picsum.photos/400/300?image=0',
+'https://picsum.photos/400/300?image=10',
+'https://picsum.photos/400/300?image=20',
+'https://picsum.photos/400/300?image=30'
+]"></app-diashow>
