--- a/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
+++ b/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
@@ -10,3 +10,5 @@
 'https://picsum.photos/400/300?image=20',
 'https://picsum.photos/400/300?image=30'
 ]"></app-diashow>
+<hr>
+<app-homeaway></app-homeaway>
