--- a/vadzim/myFirstNgApp/src/app/labs/homeaway/homeaway.component.html
+++ b/vadzim/myFirstNgApp/src/app/labs/homeaway/homeaway.component.html
@@ -1,8 +1,4 @@
 <!-- homeaway.compoment.html -->
 <h2>homeaway</h2>
 
-<div
-(mouseenter)="home()"
-(mouseleave)="away()"
-[className]="isHome ? 'home' : 'away'"
->{{this.getText()}}</div>
+<div (mouseenter)="home()" (mouseleave)="away()" [className]="isHome ? 'home' : 'away'">{{this.getText()}}</div>
