--- a/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
+++ b/vadzim/myFirstNgApp/src/app/labs/labs-overview/labs-overview.component.html
@@ -17,3 +17,5 @@
 <app-timer [seconds]="9" (startEvent)="handleStart()" (tick)="handleTick($event)"></app-timer>
 <p>{{ startMessage }}</p>
 <p>{{ timerMessage }}</p>
+<hr>
+<app-pwconfirm></app-pwconfirm>
