--- a/vadzim/myFirstNgApp/src/app/todos/todotable/todotable.component.html
+++ b/vadzim/myFirstNgApp/src/app/todos/todotable/todotable.component.html
@@ -12,8 +12,9 @@
   <tbody>
     <tr *ngFor="let todo of todos; index as i">
       <th scope="row">{{i}}</th>
-      <td><a routerLink="/todo/{{todo.id}}">{{todo.title | uppercase}}</a>
-        </td>
+      <!-- <td><a routerLink="/todo/{{todo.id}}">{{todo.title | uppercase}}</a>
+        </td> -->
+        <td>{{todo.title | uppercase}}</td>
       <td>{{todo.completed}}</td>
       <td>{{todo.userId}}</td>
     </tr>
